--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -20,3 +20,11 @@ body {
   margin: 0px;
   background-color: rgba(229, 243, 255, 0.836);
 }
+
+#title {
+  color: rgb(102, 49, 104);
+}
+
+#main_title {
+  color: rgb(160, 74, 200);
+}
